site/app/assets/stylesheets/home.css
#hero {
  background-image: url('pexels-fauxels-3184432.jpg');
  background-size: cover;
  background-position-x: center;
}

#hero-container {
  display: flex;
  flex-direction: column;
  gap: 40px;
}

#hero-overlay {
  align-items: center;
  background-color: rgba(var(--primary-color-rgb), 0.9);
  display: flex;
  flex-direction: column;
  gap: 10px;
  height: calc(100vh - 70px); /* 70px is the height of the navbar */
  min-height: 480px;
  padding-bottom: 10px;
  padding-top: 10px;
}

@media (min-width: 768px) {
  #hero-overlay {
    background: linear-gradient(to right, rgba(var(--primary-color-rgb), 0.9) 90%, transparent);
  }
  .overlay-text {
    margin-left: 20px;
    margin-right: 20px;
  }
}

.overlay-text {
  color: var(--background-color);
  text-align: center;
}

.overlay-title {
  font-size: var(--font-size-title);
  font-weight: 700;
}

.overlay-subtitle {
  font-size: var(--font-size-subheader);
}

.screenshot {
  display: flex;
  justify-content: center;
  max-width: 100%;
  min-height: 200px;
}

